# duecheck

./: .gitignore  AGENTS.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  STATE_REPORT.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml  dependency-review.yml  release.yml  scorecard.yml
docs/assets/: CAPTURE_TEMPLATE.md
duecheck/: __init__.py  adapter.py  cli.py  config.py  delta.py  ledger.py  redact.py  report.py  risk.py  schedule.py  types.py  validate.py
duecheck/demo_data/: sample_bundle.json
duecheck/renderers/: __init__.py  html.py  markdown.py
duecheck/schemas/: __init__.py  delta.schema.json
examples/sample_output/: changes.md  delta.json  ledger.json  risk.json
release/evidence/cli-ux-surface/: RUN_RESULT.json  commits.txt  test_results.txt
release/evidence/engine-spec-hardening/: RUN_RESULT.json  commits.txt  test_results.txt
release/evidence/extension-live-fetch-p1/: DEFERRED_PARITY.md  RUN_RESULT.json  STORAGE_CONTRACT.md  commits.txt
schemas/: ledger.schema.json  risk.schema.json
tests/: conftest.py  test_adapter.py  test_cli.py  test_cli_ux.py  test_config.py  test_delta.py  test_golden.py  test_ledger.py  test_packaging.py  test_renderers.py  test_report.py  test_risk.py  test_schedule.py  test_schema_validation.py  test_types.py  test_validate.py
wrappers/chrome-extension/: LOAD_TEST.md  README.md  background.mjs  manifest.json  popup.css  popup.html  popup.mjs
(+44 files in other folders)
