[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "duecheck"
version = "0.1.0"
description = "Canvas early warning engine — track assignments, compute academic risk."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "CJ Chanhnourack" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.11",
    "pytest>=8.0",
    "ruff>=0.15.0",
]

[project.urls]
Homepage = "https://github.com/cjchanh/duecheck"
Issues = "https://github.com/cjchanh/duecheck/issues"
Source = "https://github.com/cjchanh/duecheck"

[project.scripts]
duecheck = "duecheck.cli:main"

[tool.setuptools.packages.find]
include = ["duecheck*"]

[tool.setuptools.package-data]
duecheck = ["demo_data/*.json"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
